[package]
name = "darte"
version = "0.1.0"
edition = "2024"

[dependencies]
audiotags = "0.5.0"
clearscreen = "4.0.2"
rustyline = "16.0.0"

[lints.clippy]
single_match = "deny"
single_match_else = "deny"
needless_match = "deny"
needless_late_init = "deny"
redundant_pattern_matching = "deny"
redundant_pattern = "deny"
redundant_guards = "deny"
collapsible_match = "deny"
match_single_binding = "deny"
match_same_arms = "deny"
match_ref_pats = "deny"
match_bool = "deny"
needless_bool = "deny"
unwrap_used = "deny"
# expect_used = "deny"
